Replace guava collections with JDK equivalents and bump guava